# Rasterization-Software

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  brute_sequencial.cpp  controllers_example.cpp  loader_example.cpp  main.cpp  shaders_example.cpp
assets/shaders/: fst_parallel.compute  raster.compute  set_to_black.compute  set_to_blue.compute
executables/: brute_sequencial.cpp  fst_parallel.cpp  gltexstor_ex.cpp  loader_example.cpp  shaders_example.cpp
include/algorithms/: frustum_cull.h  occlusion_cull.h
include/geometry/sphere/: sphere.h
include/molecule_loader/: basic_loader.h
include/utils/: math_defines.h
include/utils/sequential/: aux_functions.h
include/ux/: camera.h  camera_controller.h  input.h
include/vis/: canvas.h  compute_shader_program.h  window.h
include/vis/gl/: frame_buffer.h  storage_buffer.h  texture.h
src/: CMakeLists.txt
src/molecule_loader/: basic_loader.cpp
src/utils/sequential/: aux_functions.cpp
src/ux/: camera.cpp  camera_controller.cpp  input.cpp
src/vis/: canvas.cpp  compute_shader_program.cpp  window.cpp
src/vis/gl/: frame_buffer.cpp  storage_buffer.cpp  texture.cpp
